# lmdb

lmdb/: CMakeLists.txt  lmdbConfig.cmake.in
lmdb_8.8.8_MSVC_19.0.24215.1_install/lib/: lmdb.lib  lmdbd.lib
lmdb_8.8.8_MSVC_19.0.24215.1_install/lib/cmake/lmdb/: lmdbConfig.cmake  lmdbConfigVersion.cmake  lmdbTargets-debug.cmake  lmdbTargets-release.cmake  lmdbTargets.cmake
